--- a/packages/xdl/package.json
+++ b/packages/xdl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xdl",
-  "version": "52.0.0",
+  "version": "52.0.1-alpha.2+ce2eb2fb",
   "description": "The Expo Development Library",
   "main": "build/xdl.js",
   "files": [
@@ -132,5 +132,5 @@
     "promise-print": "^2.3.0",
     "rimraf": "^2.5.4"
   },
-  "gitHead": "58a1704c720ba35613d6cb6048a1f3d9abba550d"
+  "gitHead": "ce2eb2fb02eb5338c295db5f32f743ed6d3f17d9"
 }
