--- a/packages/expo-cli/package.json
+++ b/packages/expo-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-cli",
-  "version": "2.6.0",
+  "version": "2.6.1-alpha.2+ce2eb2fb",
   "description": "The command-line tool for creating and publishing Expo apps",
   "preferGlobal": true,
   "main": "build/exp.js",
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@expo/bunyan": "3.0.2",
-    "@expo/dev-tools": "^0.2.18",
+    "@expo/dev-tools": "^0.2.19-alpha.2+ce2eb2fb",
     "@expo/json-file": "^8.1.0",
     "@expo/simple-spinner": "^1.0.2",
     "@expo/spawn-async": "^1.3.0",
@@ -92,11 +92,11 @@
     "untildify": "^3.0.2",
     "validator": "^10.4.0",
     "wordwrap": "^1.0.0",
-    "xdl": "^52.0.0"
+    "xdl": "^52.0.1-alpha.2+ce2eb2fb"
   },
   "optionalDependencies": {
     "@expo/traveling-fastlane-darwin": "1.6.1",
     "@expo/traveling-fastlane-linux": "1.6.1"
   },
-  "gitHead": "5e6aab74774ccab6b22c4ece13c285022e04bff2"
+  "gitHead": "ce2eb2fb02eb5338c295db5f32f743ed6d3f17d9"
 }
